Fix: Fixed header overlap with content when scrolling. Fixed tooltip next to Rehive groups.

--- a/src/sass/theme/components/_pageTop.scss
+++ b/src/sass/theme/components/_pageTop.scss
@@ -14,6 +14,7 @@
 
 .transparent-header-company-setup {
   background-color: $transparent;
+  position: absolute;
 }
 
 
